data/usersCode/vbcvbdfg/question1/error.txt
/home/gauravghati/clash/data/usersCode/vbcvbdfg/question1/code1-0.cpp:1:1: error: ‘cvdfgsdfgtvre’ does not name a type
 cvdfgsdfgtvre
 ^~~~~~~~~~~~~
